--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <version>42.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
